--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {   
     color: deeppink;
     text-align: center;
-    font-family: Arial;
+    font-family: Courier;
     background-color: rgb(44, 44, 44);
 }
 #bienvenida{
