--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,3 +18,9 @@ body
     padding: 0.5em;
     font-family: Arial;
 }
+#logo{
+    text-align: right;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75); 
+    padding: 1cm;
+    image-resolution: 25*25;
+}
