--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,3 +18,9 @@ body
     padding: 0.5em;
     font-family: Arial;
 }
+#footer{
+    background-color: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
